# phylo2vec_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  phylo2vec
src/: main.cpp  phylo2vec.cpp  phylo2vec.hpp
test/: 100trees.txt  phylo2vec_test.cpp
